Actualizacion del README y amplía niveles de urgencia