@@ -21,6 +21,8 @@
             <groupId>com.tilab.jade</groupId>
             <artifactId>jade</artifactId>
             <version>4.6.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/jade.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -38,14 +40,7 @@
                 <configuration>
                     <includeProjectDependencies>true</includeProjectDependencies>
                     <includePluginDependencies>false</includePluginDependencies>
-                    <jvmArgs>
-                        <jvmArg>--add-opens</jvmArg>
-                        <jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
-                        <jvmArg>--add-opens</jvmArg>
-                        <jvmArg>java.base/java.util=ALL-UNNAMED</jvmArg>
-                        <jvmArg>--add-opens</jvmArg>
-                        <jvmArg>java.base/java.io=ALL-UNNAMED</jvmArg>
-                    </jvmArgs>
+
                 </configuration>
             </plugin>
         </plugins>
